Revision history for Perl distribution PathTools.

 - Reimplemented abs_path() on VMS to use
   VMS::Filespec::vms_realpath() when it's available. [John E. Malmberg]

3.25_01 - Sat Oct 13 21:13:57 2007

 - Major fixes on Win32, including a rewrite of catdir(), catfile(),
   and canonpath() in terms of a single body of code. [Heinrich Tegethoff]

 - For Win32 and Cygwin, case-tolerance can vary depending on the
   volume under scrutiny.  When Win32API::File is available, it will
   be employed to determine case-sensitivity of the given filesystem
   (C: by default), otherwise we still return the default of 1. [Reini
   Urban]

 - On Cygwin, we added $ENV{'TMP'} and $ENV{'TEMP'} to the list of
   possible places to look for tmpdir() return values. [Reini Urban]

 - Added lots more tests for Cygwin. [Reini Urban]

 - canonpath() with no arguments and canonpath(undef) now consistently
   return undef on all platforms. [Spotted by Peter John Edwards]

 - Fixed splitdir('') and splitdir(undef) and splitdir() to return an
   empty list on VMS and MacOS, like it does on other platforms.
   [Craig A. Berry]

 - All .pm files now have the same $VERSION number, rather than a
   hodgepodge of various numbers.

3.25 - Mon May 21 21:07:26 2007

 - Added a workaround for auto-vivication-of-function-args Perl bug
   (triggered by OS/2-specific code). [Ilya Zakharevich]

 - Sync with a bleadperl change: miniperl can no longer use Win32::*
   functions because it cannot load Win32.dll. [Jan Dubois]

 - We only need to load ppport.h when building outside the core, so we
   avoid using it when in the core.
 
3.24 - Sun Nov 19 22:52:49 2006

 - Fixed a bug in the $ENV{PWD}-updating of Cwd::chdir() when a
   dirhandle is passed in. [Steve Peters]

 - Add perl 5.005 to the list of requirements in the
   Build.PL/Makefile.PL/META.yml.

 - Add ExtUtils::CBuilder to the list of build_requires in Build.PL.

 - Improved performance of canonpath() on Unix-ish platforms - on my