@@ -3,6 +3,9 @@ Revision history for Perl distribution PathTools.
  - Reimplemented abs_path() on VMS to use
    VMS::Filespec::vms_realpath() when it's available. [John E. Malmberg]
 
+ - Applied a patch from bleadperl (31431) that fixes some VMS
+   splitdir() problems. [Craig A. Berry]
+
 3.25_01 - Sat Oct 13 21:13:57 2007
 
  - Major fixes on Win32, including a rewrite of catdir(), catfile(),
